# runa-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
docs/: README-onboarding.md  index.md
docs/adr/: ADR-001-dynaconf-with-pydantic.md  ADR-002-abstract-layer.md  ADR-003-provider-registry-for-extension.md  ADR-005-cache-strategy.md  ADR-006-rate-limit-with-limits-lib.md  ADR-007-abstraction-repository-and-beaine-adoption.md  ADR-008-observability-stack-choice.md  ADR-009-resilience-partterns-by-decorators.md  ADR-03-base-service.md  ADR-106-ai-provider-abstraction.md  ADR-107-ai-governance-and-observability.md  ADR-109-decoupled-prompt-management-system.md  ADR-110-modular-ai-agent-architecture.md  ADR-131-polymorphic-retrieval-factory-and-hybrid-graphrag.md
docs/architecture/: athomic-layer.md  dependency-injection.md  domain-layer.md  index.md
docs/athomic/: config.md  context.md  database.md  lifecycle.md  services.md  session.md
docs/athomic/ai/: agents.md  cognitive.md  context.md  documents.md  embeddings.md  governance.md  graph.md  llm.md  memory.md  qa_evaluation.md  rag.md  sandbox.md  semantic_cache.md  workflow.md
docs/athomic/ai/agents/: persistence.md
docs/athomic/config/: schemas.md
docs/athomic/database/: kvstore.md
docs/athomic/observability/: health.md  log.md  metrics.md  tracing.md
docs/athomic/performance/: bootstrap.md  cache.md
docs/athomic/resilience/: circuit_breaker.md  locking.md  rate_limiter.md  retry.md
infra/: README.md  docker-compose.all.yml
infra/ai/llm/nomic-embed-text/: docker-compose.yml
infra/ai/llm/ollama/: docker-compose.yml
infra/ai/llm/ollama-qwen05b/: docker-compose.yml
infra/database/kvstore/redis/: docker-compose.yml
settings/: settings.toml
site/: 404.html  index.html  objects.inv  sitemap.xml
site/README-onboarding/: index.html
site/adr/ADR-000-sample-doc/: index.html
site/adr/ADR-001-dynaconf-with-pydantic/: index.html
site/adr/ADR-002-abstract-layer/: index.html
site/adr/ADR-003-provider-registry-for-extension/: index.html
site/adr/ADR-004-safelogger-with-masking/: index.html
site/adr/ADR-005-cache-strategy/: index.html
site/adr/ADR-006-rate-limit-with-limits-lib/: index.html
site/adr/ADR-007-abstraction-repository-and-beaine-adoption/: index.html
site/adr/ADR-008-observability-stack-choice/: index.html
site/adr/ADR-009-resilience-partterns-by-decorators/: index.html
site/adr/ADR-03-base-service/: index.html
site/adr/ADR-106-ai-provider-abstraction/: index.html
site/adr/ADR-107-ai-governance-and-observability/: index.html
site/adr/ADR-109-decoupled-prompt-management-system/: index.html
site/adr/ADR-110-modular-ai-agent-architecture/: index.html
site/adr/ADR-131-polymorphic-retrieval-factory-and-hybrid-graphrag/: index.html
site/architecture/: index.html
site/architecture/athomic-layer/: index.html
site/architecture/dependency-injection/: index.html
site/architecture/domain-layer/: index.html
site/athomic/ai/agents/: index.html
site/athomic/ai/cognitive/: index.html
site/athomic/ai/context/: index.html
site/athomic/ai/governance/: index.html
site/athomic/ai/llm/: index.html
site/athomic/ai/workflow/: index.html
site/athomic/config/: index.html
site/athomic/config/schemas/: index.html
site/athomic/context/: index.html
site/athomic/database/: index.html
site/athomic/database/kvstore/: index.html
site/athomic/lifecycle/: index.html
site/athomic/observability/health/: index.html
site/athomic/observability/log/: index.html
site/athomic/observability/metrics/: index.html
site/athomic/observability/tracing/: index.html
site/athomic/performance/bootstrap/: index.html
site/athomic/performance/cache/: index.html
site/athomic/resilience/circuit_breaker/: index.html
site/athomic/resilience/locking/: index.html
site/athomic/resilience/rate_limiter/: index.html
site/athomic/resilience/retry/: index.html
site/athomic/services/: index.html
site/athomic/session/: index.html
site/search/: search_index.json
src/nala/api/: app.py
src/nala/api/exceptions/: __init__.py  exception_handler.py
src/nala/api/middleware/: request_context_middleware.py  request_metrics_middleware.py  tracing.py
src/nala/api/routes/: __init__.py  base_router.py
src/nala/api/schemas/: chat.py
src/nala/api/services/: hr_agent_service.py
src/nala/api/startup/: domain_initializers.py  setup.py
src/nala/athomic/: __init__.py  facade.py  provider.py
src/nala/athomic/ai/: __init__.py  exceptions.py
src/nala/athomic/base/: __init__.py  base_manager.py  environment.py  exceptions.py  factory.py  handler_resolver.py  instance_registry.py  module_loader.py  registry.py
src/nala/athomic/config/: __init__.py  settings.py
src/nala/athomic/context/: __init__.py  context_vars.py  exceptions.py  execution.py  generator.py  manager.py  propagation.py  resolvers.py  types.py
src/nala/athomic/enums/: ai.py  (+6 more)
tests/: conftest.py
tests/integration/: conftest.py
tests/settings/ai/: test_int_google_genai.toml  test_int_llm_local.toml  test_int_llm_ollama.toml
tests/settings/api/: test_int_document_mongo_repo.toml
tests/settings/lifecycle/: test_int_athomic_startup.toml
tests/settings/resilience/: test_int_multiple_circuits.toml
(+470 files in other folders)
